--- a/app/src/main/res/layout/fragment_food_overview.xml
+++ b/app/src/main/res/layout/fragment_food_overview.xml
@@ -105,15 +105,16 @@
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
-      <!-- MEASUREMENTS -->
+
+      <!-- ANALYSES -->
       <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/measurements"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/colorPrimary"/>
+          android:id="@+id/glucose_values"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="16dp"
+          android:text="@string/analyses"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+          android:textColor="@color/colorPrimary"/>
 
       <LinearLayout
         android:layout_width="match_parent"
@@ -201,50 +202,8 @@
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp">
-
-        <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:text="@string/average_increase_glucose"
-          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-        <TextView
-          android:id="@+id/glucose_increase_avg"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:gravity="end"
-          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-      </LinearLayout>
-
-      <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp">
-
-        <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:text="@string/integral"
-          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-        <TextView
-          android:id="@+id/integral"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:gravity="end"
-          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-      </LinearLayout>
-
-      <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp">
 
         <TextView
@@ -261,31 +220,21 @@
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
-
-      <!-- ANALYSES -->
-      <TextView
-        android:id="@+id/glucose_values"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/analyses"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/colorPrimary"/>
-
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp">
 
         <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:text="@string/personal_index"
+          android:text="@string/gi"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
         <TextView
-          android:id="@+id/personal_index"
+          android:id="@+id/gi"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="end"
