--- a/app/src/main/res/layout/fragment_measurement_list.xml
+++ b/app/src/main/res/layout/fragment_measurement_list.xml
@@ -3,7 +3,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  tools:context=".view.food.MeasurementsFragment">
+  tools:context=".view.food.MeasurementListFragment">
 
   <data>
     <variable
