--- a/app/src/main/res/layout/fragment_food_overview.xml
+++ b/app/src/main/res/layout/fragment_food_overview.xml
@@ -146,7 +146,7 @@
         <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:text="@string/max_glucose"
+          android:text="Glucose max (mg/dl)"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
         <TextView
@@ -167,7 +167,7 @@
         <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:text="@string/average_glucose"
+          android:text="Glucose avg. (mg/dl)"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
         <TextView
@@ -188,7 +188,7 @@
         <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:text="@string/max_increase_glucose"
+          android:text="Glucose max. increase (mg/dl)"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
         <TextView
