--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -17,23 +17,18 @@
         android:id="@+id/food_item_food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.87"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="@string/food_list_main_text"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/food_item_brand_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.6"
-        android:fontFamily="@font/roboto"
         android:text="@string/food_list_sub_text"
-        android:textColor="#000000"
-        android:textSize="14sp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/food_item_food_name" />
 
@@ -42,11 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="31dp"
-        android:alpha="0.6"
-        android:fontFamily="@font/roboto"
-        android:text="@string/food_list_main_text"
-        android:textColor="#000000"
-        android:textSize="12sp"
+        android:text="GI"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/food_item_food_name"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
