--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -35,7 +35,7 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Age (years)"
+            android:text="@string/age_years"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
@@ -56,7 +56,7 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Height (cm)"
+            android:text="@string/height_cm"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
@@ -77,7 +77,7 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Weight (kg)"
+            android:text="@string/weight_kg"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
