--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -3,8 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/main_activity_nav_graph"
-  app:startDestination="@id/homeFragment">
+    app:startDestination="@id/homeFragment">
 
   <fragment
     android:id="@+id/homeFragment"
@@ -79,9 +78,7 @@
     <argument
       android:name="food_id"
       app:argType="integer"/>
-    <action
-      android:id="@+id/action_addMeasurement_to_foodInfoFragment"
-      app:destination="@id/foodHostFragment"/>
+    <action app:destination="@id/foodHostFragment"/>
   </fragment>
 
   <fragment
@@ -98,9 +95,7 @@
     android:name="hochschule.de.bachelorthesis.view.me.MeEditFragment"
     android:label="@string/edit_user_data"
     tools:layout="@layout/fragment_me_edit">
-    <action
-      android:id="@+id/action_meEditFragment_to_meFragment"
-      app:destination="@id/meFragment"/>
+    <action app:destination="@id/meFragment"/>
   </fragment>
   <fragment
     android:id="@+id/editMeasurementFragment"
